sunshine_core/include/sunshine_core.h

#pragma once
#include <stdint.h>
#include <stddef.h>

/* ── Schema version ────────────────────────────────────────────────────────
 * Bump whenever ANY field is added, removed, reordered, or resized in
 * SunshineInput, SunshineState, or SunshineVars.
 * New fields MUST be appended at the END of the struct — never insert. */
#define SUNSHINE_SCHEMA_VERSION  1U

/* ── Control modes ─────────────────────────────────────────────────────── */
#define SUNSHINE_MODE_DISABLED  0U
#define SUNSHINE_MODE_TANK      1U
#define SUNSHINE_MODE_MELTY     2U

/* ── Physical / sensor constants ───────────────────────────────────────── */
#define ADXL_SCALE_MS2      (49e-3f * 9.81f)   /* m/s² per ADXL375 count  */
#define MAG_SCALE_UT        0.058f              /* µT per LIS3MDL count    */
#define BATT_OFFSET_REF_V   7.6f               /* reference voltage (V)   */
#define BATT_SCALE_V        0.0205f             /* V per batt_offset LSB   */
#define IMU_RADIUS_M        0.011f              /* 11 mm from spin centre  */
#define SUNSHINE_MAG_MIN_OMEGA  (4.0f * 3.14159265f)  /* ~120 RPM, rad/s  */

/* ── Kalman tuning (override with -D flag for tuning builds) ───────────── */
#ifndef KF_Q_THETA
#define KF_Q_THETA   1e-6f
#endif
#ifndef KF_Q_OMEGA
#define KF_Q_OMEGA   1e-3f
#endif
#ifndef KF_R_ACCEL
#define KF_R_ACCEL   0.5f
#endif
#ifndef KF_R_MAG
#define KF_R_MAG     0.1f
#endif

/* ── 4th-order LP Butterworth, fc=1 Hz, fs=1000 Hz, two cascaded biquads ─
 * Generated by tools/gen_filter_coefficients.py                           */
/* Section 1 */
#define LP4_S1_B0   9.812611e-06f
#define LP4_S1_B1   1.962522e-05f
#define LP4_S1_B2   9.812611e-06f
#define LP4_S1_A1  (-1.98841802f)
#define LP4_S1_A2   0.98845727f
/* Section 2 */
#define LP4_S2_B0   9.845898e-06f
#define LP4_S2_B1   1.969180e-05f
#define LP4_S2_B2   9.845898e-06f
#define LP4_S2_A1  (-1.99516324f)
#define LP4_S2_A2   0.99520262f

/* ── Control tuning ────────────────────────────────────────────────────── */
#define DRIFT_PULSE_WIDTH   0.25f   /* fraction of rotation at peak diff   */
#define DRIFT_RAMP_WIDTH    0.10f   /* fraction for linear ramp            */
#define DRIFT_AMPLITUDE     0.40f   /* max diff as fraction of base        */
#define THETA_RATE_RADS     3.14159265f  /* rad/s per full ctrl_theta      */
#define MAX_DSHOT_SPIN      1500.0f
#define DSHOT_NEUTRAL       1048.0f
#define DSHOT_MAX           2047.0f
#define DSHOT_MIN           48.0f

/* ── IO layer structs ──────────────────────────────────────────────────── */

/* SunshineInput: 1 kHz sensor frame, 29 bytes packed.
 * APPEND-ONLY: never insert, reorder, or resize existing fields. */
typedef struct __attribute__((packed)) {
    uint32_t time_us;
    int16_t  accel_x;       /* ADXL375 raw counts; IMU at 45° to radial   */
    int16_t  accel_y;       /* centripetal + tangential both split here    */
    int16_t  accel_z;       /* vertical (~+20 cnts = 1g at rest)          */
    int16_t  mag_x;         /* LIS3MDL raw counts at ±16 Gauss            */
    int16_t  mag_y;
    int16_t  mag_z;
    uint16_t erpm_left;     /* IEEE-754 float16 bits                      */
    uint16_t erpm_right;
    int8_t   rssi;          /* ESP-NOW RSSI at brain (dBm)                */
    int8_t   ctrl_x;        /* [-127, 127]                                */
    int8_t   ctrl_y;
    int8_t   ctrl_theta;
    uint8_t  ctrl_throttle; /* [0, 255]                                   */
    int8_t   batt_offset;   /* relative to 7.6 V, 0.0205 V/LSB           */
    uint8_t  dshot_left_q;  /* DShot cmd from PREVIOUS tick, quantised    */
    uint8_t  dshot_right_q;
    uint8_t  mode;          /* SUNSHINE_MODE_*                            */
} SunshineInput;
/* static_assert(sizeof(SunshineInput) == 29, ""); */

/* SunshineState: filter history, 60 bytes packed.
 * APPEND-ONLY rule applies here too. */
typedef struct __attribute__((packed)) {
    float kf_theta;         /* Kalman angle estimate (rad, unwrapped)     */
    float kf_omega;         /* Kalman angular velocity estimate (rad/s)   */
    float kf_P[4];          /* 2×2 covariance, row-major [P00,P01,P10,P11]*/
    float theta_offset;     /* driver heading offset (rad)                */
    float derot_lp_I[4];    /* LP state for derotated I component         */
                            /* [s1_w0, s1_w1, s2_w0, s2_w1]              */
    float derot_lp_Q[4];    /* LP state for derotated Q component         */
} SunshineState;
/* static_assert(sizeof(SunshineState) == 60, ""); */

/* SunshineVars: derived variables, never telemetered, 52 bytes packed.
 * APPEND-ONLY: never insert, reorder, or resize existing fields. */
typedef struct __attribute__((packed)) {
    float   omega_from_accel;  /* rad/s, inflated during spinup            */
    float   derot_I;           /* derotated+filtered mag I (µT)            */
    float   derot_Q;           /* derotated+filtered mag Q (µT)            */
    float   mag_angle;         /* atan2(Q,I) rad                           */
    float   est_theta;         /* = kf_theta                               */
    float   est_omega;         /* = kf_omega                               */
    float   dshot_cmd_left;    /* [0, 2047], pre-quantisation              */
    float   dshot_cmd_right;
    float   batt_voltage;      /* actual voltage (V)                       */
    float   erpm_left;         /* decoded from float16                     */
    float   erpm_right;
    float   centripetal_ms2;   /* sqrt(ax²+ay²)*ADXL_SCALE_MS2            */
    uint8_t led_on;            /* 1 when within ±3° of zero heading        */
    uint8_t accel_saturated;   /* 1 when centripetal > 280g equivalent     */
    uint8_t mag_valid;         /* 1 when est_omega > SUNSHINE_MAG_MIN_OMEGA*/
    uint8_t loop_overrun;      /* 1 when 1kHz tick exceeded 1000µs (HW)   */
} SunshineVars;

/* ── Public API ────────────────────────────────────────────────────────── */
#ifdef __cplusplus
extern "C" {
#endif

void     sunshine_state_init(SunshineState *state);
void     sunshine_step(const SunshineInput *in, SunshineState *state, SunshineVars *vars_out);

void     sunshine_input_serialize  (const SunshineInput *in,    uint8_t *buf);
void     sunshine_input_deserialize(const uint8_t *buf,         SunshineInput *in);
void     sunshine_state_serialize  (const SunshineState *state, uint8_t *buf);
void     sunshine_state_deserialize(const uint8_t *buf,         SunshineState *state);

uint32_t sunshine_schema_version(void);

float    sunshine_accel_to_ms2(int16_t raw);
float    sunshine_mag_to_ut   (int16_t raw);
float    sunshine_batt_to_v   (int8_t  off);
float    sunshine_f16_to_f32  (uint16_t half);
uint16_t sunshine_f32_to_f16  (float f);

#ifdef __cplusplus
}
#endif